syntax = "proto3";

package article;

service ArticleService {
  // Articles Management
  rpc CreateArticle (CreateArticleRequest) returns (Article);
  rpc GetArticle (GetArticleRequest) returns (Article);
  rpc GetArticles (GetArticlesRequest) returns (ArticlePages);
  rpc UpdateArticle (UpdateArticleRequest) returns (Article);
  rpc DeleteArticle (DeleteArticleRequest) returns (DeleteArticleResponse);

  // Assets Management
  rpc UploadAsset (stream UploadAssetRequest) returns (UploadAssetResponse);
  rpc DownloadAsset (DownloadAssetRequest) returns (stream DownloadAssetResponse);
  rpc DeleteAsset (DeleteAssetRequest) returns (DeleteAssetResponse);
  rpc ListAssets (ListAssetsRequest) returns (AssetList);
}

// Articles Management Messages
message Article {
  string article_id = 1;
  string owner_id = 2;
  string title = 3;
  string created_at = 4;
  string updated_at = 5;
  string abstract = 6;
  int32 views = 7;
  string status = 8;
  int64 stars_total = 9;
  int64 people_rated = 10;
  TagList tags = 11;
}

message TagList {
  repeated string tag = 1;
}

message CreateArticleRequest {
  string owner_id = 1;
  string title = 2;
  string abstract = 3;
  string status = 4;
  TagList tags = 5;
}

message ArticlePages {
  int32 total_count = 1;
  repeated ArticleList page = 2;
}

message ArticleList {
  int32 total_count = 1;
  repeated Article articles = 2;
}

message GetArticleRequest {
  string article_id = 1;
}

message GetArticlesRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  optional string owner_id = 3;
  optional string title = 4;
  optional string abstract = 5;
  optional string status = 6;
  optional string min_rate = 7;
  optional TagList tags = 8;
}

message UpdateArticleRequest {
  string article_id = 1;
  string owner_id = 2;
  string title = 3;
  string abstract = 4;
  string status = 5;
  TagList tags = 6;
}

message DeleteArticleRequest {
  string article_id = 1;
}

message DeleteArticleResponse {
  bool success = 1;
}


// Assets Management Messages
message AssetMetadata {
  string article_id = 1;
  string filename = 2;
  string content_type = 3;
  int64 total_size = 4;
}

message UploadAssetRequest {
  oneof data {
    AssetMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message UploadAssetResponse {
  string asset_id = 1;
  int64 total_size = 2;
}

message DownloadAssetRequest {
  string asset_id = 1;
}

message DownloadAssetResponse {
  oneof data {
    AssetMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message DeleteAssetRequest {
  string asset_id = 1;
}

message DeleteAssetResponse {
  bool success = 1;
}

message ListAssetsRequest {
  string article_id = 1;
}

message AssetList {
  repeated AssetMetadata assets = 1;
}